Revision history for DBIx-Class-MooseColumns

0.08    2010-06-21 14:04:00+0200
        Does not export Moose sugar any more.

0.07    2010-06-17 17:02:00+0200
        Added missing test dep for MooseX::NonMoose.

0.06    2010-06-16 14:40:00+0200
        Renamed from MooseX-DBIC-AddColumn to DBIx-Class-MooseColumns.

0.05    2010-06-16 14:40:00+0200
        Deprecation in favour of DBIx-Class-MooseColumns.

0.04    2010-06-07 13:09:00+0200
        Fixed a silly Makefile.PL bug (M:I::Share was missing).

0.03    2010-06-01 16:51:00+0200
        Fixed synopsis.

0.02    2010-06-01 13:21:00+0200
        Removed non-ASCII chars from POD.

0.01    2010-05-14 00:10:00+0100
        First version. We will see where it goes.