@@ -3,10 +3,12 @@
 use strict;
 use warnings;
 
-use Test::Most tests => 1;
+use Test::Most;
 
 BEGIN {
-	use_ok( 'DBIx::Class::MooseColumns' );
+  use_ok( 'DBIx::Class::MooseColumns' );
 }
 
 diag( "Testing DBIx::Class::MooseColumns $DBIx::Class::MooseColumns::VERSION, Perl $], $^X" );
+
+done_testing;
