@@ -2,6 +2,7 @@ Revision history for DBIx-Class-MooseColumns
 
 0.08    2010-06-21 14:04:00+0200
         Does not export Moose sugar any more.
+	Added tests for warnings during "has" processing.
 
 0.07    2010-06-17 17:02:00+0200
         Added missing test dep for MooseX::NonMoose.
